fix: release task